Homepage, about page, contact page, focus page, work page edits

--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -1,25 +1,25 @@
 <section id="cta-contact" class="bg-gray-800 text-white">
   <div class="container">
     <div class="row align-items-end">
-      <div class="col-md-2">
+      <div class="col-4 col-md-2">
         <div class="content text-center">
           <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/Honolulu.png)"></div>
           <p>Honolulu</p>
         </div>
       </div>
-      <div class="col-md-2">
+      <div class="col-4 col-md-2">
         <div class="content text-center">
           <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/Milwaukee.png)"></div>
           <p>Milwaukee</p>
         </div>
       </div>
-      <div class="col-md-2">
+      <div class="col-4 col-md-2">
         <div class="content text-center">
           <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/Whistler.png)"></div>
           <p>Whistler</p>
         </div>
       </div>
-      <div class="col-md-6">
+      <div class="col-12 col-md-6">
         <div class="content">
           <a href="/contact" class="quote arrow-right">It's time to say hello.</a>
         </div>
