--- a/src/assets/_scss/elements/_testimonials.scss
+++ b/src/assets/_scss/elements/_testimonials.scss
@@ -1,7 +1,12 @@
 #testimonial {
+  padding-top: 25px;
+  padding-bottom: 25px;
+
   .quote {
-    margin-bottom: 2.5rem;
+    font-size: 1.2rem;
+    margin-bottom: 2.3rem;
     font-family: $font-family-base-bold;
+    line-height: 1.8;
   }
   .quote a {
     font-family: $font-family-base;
@@ -13,6 +18,7 @@
     font-family: $font-family-secondary;
     font-weight: 600;
     text-transform: uppercase;
+    font-size: 1rem;
   }
   .title {
     font-family: $font-family-secondary;
