--- a/src/assets/_scss/layout/_page_intro.scss
+++ b/src/assets/_scss/layout/_page_intro.scss
@@ -1,6 +1,6 @@
-#page-intro {
-  @include animation(slideOpen, 1s, 1.25s);
-  .content {
-    @include animation(fadeIn, 1s, 1.75s);
-  }
-}
+// #page-intro {
+//   @include animation(slideOpen, 1s, 1.25s);
+//   .content {
+//     @include animation(fadeIn, 1s, 1.75s);
+//   }
+// }
