--- a/src/assets/_scss/views/_home.scss
+++ b/src/assets/_scss/views/_home.scss
@@ -4,6 +4,9 @@
   justify-content: space-between;
   margin-top: 30px;
   margin-bottom: 30px;
+  .logo-item {
+    padding: 20px;
+  }
   @include media-breakpoint-down(md) {
     flex-wrap: wrap;
     img {
