project updates, team member layout

--- a/src/assets/_scss/_utilities.scss
+++ b/src/assets/_scss/_utilities.scss
@@ -93,7 +93,7 @@
     margin-top: -2px;
     right: 10px;
     display: block;
-    background-color: $primary;
+    background-color: $dark;
     width: 3px;
     height: 3px;
     border-radius: 50%;
