--- a/src/assets/_scss/main.scss
+++ b/src/assets/_scss/main.scss
@@ -23,6 +23,7 @@
 @import "elements/joke_station";
 @import "elements/project_transition";
 @import "elements/quote";
+@import "elements/related_projects";
 @import "elements/testimonials";
 
 // Components
@@ -34,6 +35,7 @@
 @import "views/home_animation";
 @import "views/message_strategy";
 @import "views/project";
+@import "views/team_member";
 @import "views/work";
 
 // @import "elements/transitions";
