--- a/src/_includes/related-projects.html
+++ b/src/_includes/related-projects.html
@@ -1,22 +1,20 @@
-<section>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6">
-        <div class="content">
-          <div class="bg-image aspect-4x3" style="background-image: url({{ site.placeholders.aspect-4x3 }})"></div>
-          <h3 class="mt-3">Project Title</h3>
-          <p>project Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi cupiditate eos officia perferendis commodi soluta!</p>
-          <a href="#" class="btn btn-inline">Learn More</a>
+<section id="related-projects">
+  <div class="row no-gutters">
+    <div class="col-md-6">
+      <a href="#" class="expand-full-screen" data-transition="ProjectTransition" data-image="{{ site.placeholders.aspect-4x3 }}">
+        <div class="bg-image aspect-16x9" style="background-image: url({{ site.placeholders.aspect-4x3 }})"></div>
+        <div class="overlay">
+          <p class="project-title">Prev Project Title</p>
         </div>
-      </div>
-      <div class="col-md-6">
-        <div class="content">
-          <div class="bg-image aspect-4x3" style="background-image: url({{ site.placeholders.aspect-4x3 }})"></div>
-          <h3 class="mt-3">Project Title</h3>
-          <p>project Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi cupiditate eos officia perferendis commodi soluta!</p>
-          <a href="#" class="btn btn-inline">Learn More</a>
+      </a>
+    </div>
+    <div class="col-md-6">
+      <a href="#" class="expand-full-screen" data-transition="ProjectTransition" data-image="{{ site.placeholders.aspect-4x3 }}">
+        <div class="bg-image aspect-16x9" style="background-image: url({{ site.placeholders.aspect-4x3 }})"></div>
+        <div class="overlay">
+          <p class="project-title">Next Project Title</p>
         </div>
-      </div>
+      </a>
     </div>
   </div>
 </section>
