--- a/src/assets/_scss/base/_global.scss
+++ b/src/assets/_scss/base/_global.scss
@@ -21,17 +21,18 @@ hr {
 }
 
 dl {
-  font-size: 16px;
+  font-size: 1rem;
   dt {
-    font-family: $font-family-secondary;
+    font-family: $font-family-base-bold;
     text-transform: uppercase;
-    margin: 5px 0;
-    font-weight: 300;
-    color: $gray-500;
-    letter-spacing: 1px;
+    margin: 5px 0 0;
   }
 
   dd {
+    font-family: $font-family-secondary;
+    color: $gray-500;
+    font-weight: 300;
+    margin-bottom: 20px;
   }
 }
 
