--- a/src/assets/_scss/views/_project.scss
+++ b/src/assets/_scss/views/_project.scss
@@ -1,7 +1,21 @@
 .project-tags {
-  color: $primary;
   font-family: $font-family-secondary;
   text-transform: uppercase;
   font-size: 14px;
   letter-spacing: 1px;
+  border-bottom: 1px solid $primary;
+  margin-top: 35px;
+  p {
+    margin-bottom: 5px;
+  }
+}
+
+#project {
+  h2 {
+    margin-bottom: 0;
+  }
+  h3 {
+    font-family: $font-family-base;
+    font-size: 1.3rem;
+  }
 }
