cookie handling, about page, contact page, projects

--- a/src/_includes/cookie-policy.html
+++ b/src/_includes/cookie-policy.html
@@ -1,15 +1,15 @@
-<div class="footer-bar">
+<div class="cookie-policy">
   <div class="container">
     <div class="row">
       <div class="col-12">
         <div class="consent">
-          <p class="text-white mt-2 mb-1">
+          <p class="text-center mt-2">
             Our site uses cookies to personalize content, to provide social
             media features and to analyze traffic.
           </p>
-          <p class="text-center mb-2">
-            <a href="/privacy" class="text-white btn btn-inline btn-sm">More Details</a>
-            <a href="#" class="btn btn-outline-light btn-sm">This is acceptable</a>
+          <p class="my-2"><a id="confirm-cookie-consent" class="btn btn-outline-dark btn-sm">That's Cool</a></p>
+          <p class="text-center mb-0">
+            <a href="/privacy" class="btn btn-inline btn-sm text-dark">More Details</a>
           </p>
         </div>
       </div>
