--- a/src/_includes/good-work.html
+++ b/src/_includes/good-work.html
@@ -4,7 +4,7 @@
       <div class="col-lg-6">
         <div class="content editable">
           <p class="quote">
-            ..we do good work for good people and they make referrals. For 20
+            We do good work for good people and they make referrals. For 20
             years!”
           </p>
           <p class="quote-author">
