--- a/src/_includes/testimonials.html
+++ b/src/_includes/testimonials.html
@@ -3,7 +3,8 @@
     <div class="row align-items-center">
       <div class="col-lg-6">
         <div class="content">
-          <p class="h3">What the cool kids say</p>
+          <p class="h3">What the cool kids say <i class="icon-quote"></i></p>
+
         </div>
       </div>
       <div class="col-lg-6">
