--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -9,7 +9,7 @@
       </div>
     </div>
     {% include testimonials.html %}
-    {% include footer-bar.html %}
+    {% include cookie-policy.html %}
     {% include footer.html %}
     {% include scripts.html %}
   </body>
