--- a/src/assets/_scss/_utilities.scss
+++ b/src/assets/_scss/_utilities.scss
@@ -45,6 +45,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
+  width: 100%;
   &.aspect-5x7 {
     padding-top: 120%;
   }
