--- a/src/assets/_scss/main.scss
+++ b/src/assets/_scss/main.scss
@@ -19,7 +19,8 @@
 @import "elements/buttons";
 @import "elements/cta_contact";
 @import "elements/cognito";
-@import "elements/footer_bar";
+@import "elements/cookie_policy";
+@import "elements/hover_overlay";
 @import "elements/joke_station";
 @import "elements/project_transition";
 @import "elements/quote";
