--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -1,6 +1,6 @@
 <section id="cta-contact" class="bg-gray-800 text-white">
   <div class="container">
-    <div class="row align-items-end">
+    <div class="row align-items-center">
       <div class="col-4 col-md-2">
         <div class="content text-center">
           <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/Honolulu.png)"></div>
@@ -21,7 +21,7 @@
       </div>
       <div class="col-12 col-md-6">
         <div class="content">
-          <a href="/contact" class="quote arrow-right">It's time to say hello.</a>
+          <a href="/contact" class="quote">It's time to say hello. <i class="icon-envelope"></i></a>
         </div>
       </div>
     </div>
