--- a/src/_layouts/focus.html
+++ b/src/_layouts/focus.html
@@ -16,7 +16,7 @@ layout: default
       {% for project in page.projects %}
         <div class="col-xs-12 col-lg-6 mb-5">
           <img src="{{ project.gallery[0].image | default: site.placeholders.aspect-4x3 }}" class="img-fluid" alt="{{ project.title }}">
-          <h2 class="mt-4">{{ project.title }}</h2>
+          <h2 class="mt-4">{{ project.quote }}</h2>
           <p>{{ project.summary }}</p>
           <a href="{{ project.url }}" class="btn btn-inline">Learn more...</a>
         </div>
