--- a/src/_layouts/project.html
+++ b/src/_layouts/project.html
@@ -8,7 +8,7 @@ layout: default
     <div class="row">
       <div class="col-12">
         <div class="content">
-          <h2>{{ project.title }}</h2>
+          <h2>{{ project.quote }}</h2>
           <h3>{{ project.client }}</h3>
           <div class="project-tags">
             <p>{% for tag in page.tags %}<span {% unless forloop.last %}class="dotted"{% endunless %}>{{ tag  | capitalize }}</span>{% endfor %}</p>
