--- a/src/assets/_scss/elements/_buttons.scss
+++ b/src/assets/_scss/elements/_buttons.scss
@@ -16,11 +16,10 @@
     padding-left: 20px;
     padding-right: 20px;
     @include transition(.4s);
-    
     letter-spacing: 0;
     &:hover {
       background-color: $dark;
-      color: $light;
+      color: $light !important;
     }
   }
   &.btn-outline-light {
