--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -9,8 +9,9 @@
       </div>
     </div>
     {% include testimonials.html %}
-    {% include cookie-policy.html %}
+    {% include components/cta-contact.html %}
     {% include footer.html %}
+    {% include cookie-policy.html %}
     {% include scripts.html %}
   </body>
 </html>
