--- a/src/_includes/related-projects.html
+++ b/src/_includes/related-projects.html
@@ -1,18 +1,43 @@
-<section id="related-projects">
+{% assign current_project = page.slug %}
+
+{% for project in site.data.project_order.projects %}
+  {% if current_project == project %}
+    {% assign total_projects = site.data.project_order.projects | size %}
+    {% assign prev_index = forloop.index | minus:1 %}
+    {% if prev_index == 0 %}
+      {% assign prev_index = total_projects %}
+    {% endif %}
+
+    {% assign next_index = forloop.index | plus:1  %}
+    {% if next_index > total_projects %}
+      {% assign next_index = 1 %}
+    {% endif %}
+  {% endif %}  
+{% endfor %}
+
+{% for project in site.data.project_order.projects %}
+  {% if forloop.index == prev_index %}
+    {% assign prev_project = site.projects | where: "slug", project | first %}
+  {% endif %}
+  {% if forloop.index == next_index %}
+    {% assign next_project = site.projects | where: "slug", project | first %}
+  {% endif %}
+{% endfor %}
+<section id="related-projects" class="py-0">
   <div class="row no-gutters">
     <div class="col-md-6">
-      <a href="#" class="expand-full-screen" data-transition="ProjectTransition" data-image="{{ site.placeholders.aspect-4x3 }}">
-        <div class="bg-image aspect-16x9" style="background-image: url({{ site.placeholders.aspect-4x3 }})"></div>
+      <a href="{{ prev_project.url }}" class="expand-full-screen" data-transition="ProjectTransition" data-image="{{ prev_project.featured_image }}">
+        <div class="bg-image aspect-16x9" style="background-image: url({{ prev_project.featured_image | site.placeholders.aspect-4x3 }})"></div>
         <div class="overlay">
-          <p class="project-title">Prev Project Title</p>
+          <p class="project-title">{{ prev_project.title }}</p>
         </div>
       </a>
     </div>
     <div class="col-md-6">
-      <a href="#" class="expand-full-screen" data-transition="ProjectTransition" data-image="{{ site.placeholders.aspect-4x3 }}">
-        <div class="bg-image aspect-16x9" style="background-image: url({{ site.placeholders.aspect-4x3 }})"></div>
+      <a href="{{ next_project.url }}" class="expand-full-screen" data-transition="ProjectTransition" data-image="{{ next_project.featured_image }}">
+        <div class="bg-image aspect-16x9" style="background-image: url({{ next_project.featured_image | default: site.placeholders.aspect-4x3 }})"></div>
         <div class="overlay">
-          <p class="project-title">Next Project Title</p>
+          <p class="project-title">{{ next_project.title }}</p>
         </div>
       </a>
     </div>
