--- a/src/assets/_scss/_mixins.scss
+++ b/src/assets/_scss/_mixins.scss
@@ -8,3 +8,49 @@
   animation-fill-mode: both;
   animation-delay: ($delay);
 }
+
+@mixin inlineLinkHoverAnimation(
+  $color: $primary, 
+  $opacity: 1, 
+  $height-start: 20%, 
+  $height-hover: 200%,
+  $height-active: $height-start,
+  $offset-start: 0,
+  $offset-hover: 0,
+  $offset-active: 0,
+  $duration: 300ms, 
+  $element: '',
+  $from: 'bottom'
+){
+  & #{$element} {
+    text-decoration: none;
+    color: inherit;
+    cursor: pointer;
+    background-size: 100% ($height-start);
+    background-repeat: no-repeat;
+    background-image: linear-gradient(to top, rgba($color, $opacity) 50%, rgba(0,0,0,0) 50.1%);
+    background-position: left 0 bottom ($offset-start);
+    transition: background $duration ease;
+  }
+
+  &:focus #{$element},
+  &:hover #{$element},
+  &:active #{$element}{
+    text-decoration: none;
+    color: inherit;
+  }
+  
+  &:focus #{$element} {
+    outline: none;
+  }
+
+  &:hover #{$element}{
+    background-size: 100% ($height-hover);
+    background-position: left 0 bottom ($offset-hover);
+  }
+  
+  &:active #{$element}{
+    background-size: 100% $height-active;
+    background-position: left 0 bottom ($offset-active);
+  }
+}
