project page updates

--- a/src/assets/_scss/_utilities.scss
+++ b/src/assets/_scss/_utilities.scss
@@ -59,7 +59,10 @@
     padding-top: 56.25%;
   }
   &.aspect-hero {
-    padding-top: 42%;
+    padding-top: 30%;
+  }
+  &.bg-fixed {
+    background-attachment: fixed;
   }
 }
 
