--- a/src/assets/_scss/layout/_page_header.scss
+++ b/src/assets/_scss/layout/_page_header.scss
@@ -105,26 +105,34 @@
   @include media-breakpoint-down(sm) {
     position: fixed;
     top: 70px;
-    right: 0;
+    right: -250px;
     padding-left: 15px;
     padding-right: 15px;
     padding-bottom: 15px;
     width: 250px;
     height: 100%;
     background-color: $white;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.5);
+    @include transition(0.4s);
+    .navbar-nav {
+      padding-top: 15px;
+    }
   }
 }
 .navbar-collapse.collapsing {
   @include media-breakpoint-down(sm) {
     height: 100%;
-    @include transition(0.4s);
-    right: -100%;
+    right: -250px;
   }
 }
 .navbar-collapse.show {
   @include media-breakpoint-down(sm) {
+    height: 100%;
     right: 0;
-    @include transition(.4s);
   }
+}
+
+.collapse:not(.show) {
+    display: block;
 }
 
