--- a/src/assets/_scss/_utilities.scss
+++ b/src/assets/_scss/_utilities.scss
@@ -59,7 +59,10 @@
     padding-top: 56.25%;
   }
   &.aspect-hero {
-    padding-top: 30%;
+    padding-top: 32%;
+    @include media-breakpoint-down(sm) {
+      padding-top: 42%;
+    }
   }
   &.bg-fixed {
     background-attachment: fixed;
