Added testimonial form and refactored include a form layout for all client collection forms

--- a/src/_includes/forms/footer.html
+++ b/src/_includes/forms/footer.html
@@ -1,4 +1,4 @@
-<footer id="strategy-footer">
+<footer id="form-footer">
   <img
     src="/assets/img/ocupop_footer_logo_grey.png"
     class="img-fluid"
