--- a/src/_includes/forms/header.html
+++ b/src/_includes/forms/header.html
@@ -1,4 +1,4 @@
-<header id="strategy-header" class="navbar bg-dark">
+<header id="form-header" class="navbar bg-dark">
   <div class="navbar-brand mr-0 mr-md-2 cc-active">
     {% include svg/logo-horizontal.svg %}
   </div>
