--- a/src/_includes/testimonials.html
+++ b/src/_includes/testimonials.html
@@ -1,3 +1,4 @@
+{% if page.testimonial %}
 <section id="testimonial" class="bg-secondary text-dark">
   <div class="container">
     <div class="row align-items-center">
@@ -8,23 +9,23 @@
         </div>
       </div>
       <div class="col-lg-6">
+        {% if page.testimonial.quote %}
         <div class="content">
-          {% if page.testimonial %}
           <p class="quote">&quot;{{ page.testimonial.quote }}&quot;</p>
           <p>
             <span class="author">{{ page.testimonial.author }}</small><br>
               <span class="title">{{ page.testimonial.title }}</small>
           </p>
-          {% else %}
-          <p class="quote">&quot;I get complimented on our website and materials constantly. In fact, I always joke that if
-            Ocupop hadn’t done such a great job with our design I wouldn’t be so busy all the time!&quot;</p>
+        </div>
+        {% else %}
+          <p class="quote">&quot;I get complimented on our website and materials constantly. In fact, I always joke that if Ocupop hadn’t done such a great job with our design I wouldn’t be so busy all the time!&quot;</p>
           <p>
             <span class="author">Alyssa Fox</small><br>
-              <span class="title">Founder, Fox Tax Service</small>
+            <span class="title">Founder, Fox Tax Service</small>
           </p>
-          {% endif %}
-        </div>
+        {% endif %}
       </div>
     </div>
   </div>
 </section>
+{% endif %}
