--- a/src/assets/_scss/base/_forms.scss
+++ b/src/assets/_scss/base/_forms.scss
@@ -1,3 +1,21 @@
+#form-header {
+  .navbar-brand {
+    width: 150px;
+  }
+}
+#form-footer {
+  background-color: $dark;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 160px;
+  img {
+    width: 190px;
+  }
+}
+
+
+// Enter cognito styles below
 .cognito {
   .c-forms-form {
     .c-field {
