project parallax example

--- a/src/assets/_scss/_utilities.scss
+++ b/src/assets/_scss/_utilities.scss
@@ -63,9 +63,13 @@
     @include media-breakpoint-down(sm) {
       padding-top: 42%;
     }
+    &.rellax {
+      padding-top: 42%;
+    }
   }
   &.bg-fixed {
     background-attachment: fixed;
+    
   }
 }
 
