--- a/src/assets/_scss/_utilities.scss
+++ b/src/assets/_scss/_utilities.scss
@@ -64,13 +64,18 @@
       padding-top: 42%;
     }
     &.rellax {
-      padding-top: 42%;
+      padding-top: 37%;
     }
   }
   &.bg-fixed {
     background-attachment: fixed;
     
   }
+}
+
+.parallax-window {
+    min-height: 450px;
+    background: transparent;
 }
 
 // Color Utilities
