project page updates, add website showcase feature carousel

--- a/src/assets/_scss/_utilities.scss
+++ b/src/assets/_scss/_utilities.scss
@@ -74,8 +74,11 @@
 }
 
 .parallax-window {
+  background: transparent;
+  min-height: 400px;
+  @include media-breakpoint-up(lg) {
     min-height: 800px;
-    background: transparent;
+  }
 }
 
 // Color Utilities
