--- a/src/assets/_scss/main.scss
+++ b/src/assets/_scss/main.scss
@@ -18,6 +18,7 @@
 
 // Import element specific styles
 @import "elements/buttons";
+@import "elements/carousel_web_showcase";
 @import "elements/cta_contact";
 @import "elements/cookie_policy";
 @import "elements/hover_overlay";
