--- a/src/_includes/mosaic.html
+++ b/src/_includes/mosaic.html
@@ -1,5 +1,5 @@
-<section class="mosaic {{ include.style }}">
+<div class="mosaic {{ include.style }}">
   {% for item in page.mosaic %}
     <a href="{{ item.link | default: '#' }}" class="mosaic-item" style="background-image: url({{ item.image }})" data-transition="mosaicTransition">{{ item.title }}</a>
   {% endfor %}
-</section>
+</div>
