--- a/src/assets/_scss/_animations.scss
+++ b/src/assets/_scss/_animations.scss
@@ -70,3 +70,21 @@
     }
   }
 }
+
+.mosaic-item {
+  // Loop through the cards and delay the loading animation.
+  @for $i from 1 through 20 {
+    &:nth-child(#{$i}) {
+      @include animation(cardSlideIn, 0.8s, 0.1s * $i);
+    }
+  }
+}
+
+.animated-asset {
+  // Loop through the cards and delay the loading animation.
+  @for $i from 1 through 20 {
+    &:nth-child(#{$i}) {
+      @include animation(cardSlideIn, 0.8s, 0.1s * $i);
+    }
+  }
+}
