--- a/src/assets/_scss/main.scss
+++ b/src/assets/_scss/main.scss
@@ -23,6 +23,7 @@
 @import "elements/cookie_policy";
 @import "elements/hover_overlay";
 @import "elements/joke_station";
+@import "elements/modal_team";
 @import "elements/project_transition";
 @import "elements/quote";
 @import "elements/related_projects";
