homepage scroll trigger animations

--- a/src/_includes/photo-grid.html
+++ b/src/_includes/photo-grid.html
@@ -10,7 +10,7 @@
   {% endif %}
 {% endfor %}
 
-<div class="row no-gutters">
+<div class="row fade-in no-gutters">
   <div class="col-12">
     <a href="{{ project1.url }}"
        data-image="{{ project1.featured_image | default: site.placeholders.aspect-4x3 }}"
@@ -20,14 +20,14 @@
   </div>
 </div>
 <div class="row no-gutters">
-  <div class="col-lg-6">
+  <div class="col-lg-6 slide-right">
     <a href="{{ project2.url }}"
        data-image="{{ project2.featured_image | default: site.placeholders.aspect-4x3 }}"
        data-transition="ProjectTransition">
         <div class="bg-image aspect-16x9" style="background-image: url({{ project2.featured_image | default: site.placeholders.aspect-4x3 }})"></div>
     </a>
   </div>
-  <div class="col-lg-6">
+  <div class="col-lg-6 slide-left">
     <a href="{{ project3.url }}"
        data-image="{{ project3.featured_image | default: site.placeholders.aspect-4x3 }}"
        data-transition="ProjectTransition">
