--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer id="page-footer">
-  <div class="container">
+  <div class="container fade-in">
     <div class="row">
       <div class="col-md-6">
         <div class="content">
