--- a/src/_includes/photo-grid.html
+++ b/src/_includes/photo-grid.html
@@ -10,7 +10,7 @@
   {% endif %}
 {% endfor %}
 
-<div class="row fade-in no-gutters">
+<div class="row slide-up no-gutters">
   <div class="col-12">
     <a href="{{ project1.url }}"
        data-image="{{ project1.featured_image | default: site.placeholders.aspect-4x3 }}"
