--- a/src/_includes/components/cta-contact.html
+++ b/src/_includes/components/cta-contact.html
@@ -1,5 +1,5 @@
 <section id="cta-contact" class="bg-gray-800 text-white">
-  <div class="container">
+  <div class="container fade-in">
     <div class="__react-app" data-component="ContactCTA"></div>
   </div>
 </section>
