--- a/src/_includes/good-work.html
+++ b/src/_includes/good-work.html
@@ -1,7 +1,7 @@
 <section class="bg-dark text-white">
   <div class="container">
     <div class="row">
-      <div class="col-lg-6">
+      <div class="col-lg-6 slide-up">
         <div class="content editable">
           <p class="quote">
             We do good work for good people and they make referrals. For 20
@@ -12,7 +12,7 @@
           </p>
         </div>
       </div>
-      <div class="col-lg-6">  
+      <div class="col-lg-6 slide-left">  
         <div class="content editable">
           <p>
             No cheesy sale-sters in EXPRESS shiny shirts, no account planners,
