--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -29,7 +29,13 @@
   {% feed_meta %}
 
   <!-- Fav and Touch Icons -->
-  <link rel="icon" type="image/png" href="/favicon.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#00aba9">
+  <meta name="theme-color" content="#ffffff">
 
   <link rel="stylesheet" href="https://webfonts.fontstand.com/WF-031559-2b8cdb5c18c2686f822711d4a431fccf.css" type="text/css"/>
   <!-- CSS -->
