new favicon and touchicons, fix for scroll trigger issue when using page transitions, attempt fix for parallax effect when using page transitions

--- a/src/_layouts/project.html
+++ b/src/_layouts/project.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 ---
+<div class="mirror-container"></div>
 {% assign project = page %}
 <div id="project-hero" class="bg-image aspect-hero" style="background-image:url({{ page.hero_image | default: site.placeholders.hero }})"></div>
 <section id="project" class="pb-0 project-content">
