--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -34,7 +34,7 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <link rel="manifest" href="/site.webmanifest">
   <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
-  <meta name="msapplication-TileColor" content="#00aba9">
+  <meta name="msapplication-TileColor" content="#2d89ef">
   <meta name="theme-color" content="#ffffff">
 
   <link rel="stylesheet" href="https://webfonts.fontstand.com/WF-031559-2b8cdb5c18c2686f822711d4a431fccf.css" type="text/css"/>
