--- a/src/_includes/testimonials.html
+++ b/src/_includes/testimonials.html
@@ -2,12 +2,12 @@
 <section id="testimonial" class="bg-secondary text-dark">
   <div class="container">
     <div class="row align-items-center">
-      <div class="col-lg-6 slide-up">
+      <div class="col-lg-6 fade-in">
         <div class="content">
           <p class="h3">What the cool kids say <i class="icon-quote"></i></p>
         </div>
       </div>
-      <div class="col-lg-6 slide-left">
+      <div class="col-lg-6 fade-in">
         {% if page.testimonial.quote %}
         <div class="content">
           <p class="quote">&quot;{{ page.testimonial.quote }}&quot;</p>
