--- a/src/assets/_scss/_settings.scss
+++ b/src/assets/_scss/_settings.scss
@@ -1,6 +1,4 @@
-
-
-$white:    #ffffff !default;
+$white: #ffffff !default;
 $gray-100: #f8f9fa !default;
 $gray-200: #e9ecef !default;
 $gray-300: #dee2e6 !default;
@@ -10,63 +8,63 @@ $gray-600: #6c757d !default;
 $gray-700: #494949;
 $gray-800: #333333;
 $gray-900: #212529 !default;
-$black:    #000000 !default;
+$black: #000000 !default;
 
-$blue:    #67dce5;
-$indigo:  #6610f2 !default;
-$purple:  #6f42c1 !default;
-$pink:    #e83e8c !default;
-$red:     #dc3545 !default;
-$orange:  #ff9560;
-$yellow:  #f5c938;
-$green:   #87a63e;
-$teal:    #20c997 !default;
-$cyan:    #7dd0e8 !default;
-$navy:    #18374b;
+$blue: #67dce5;
+$indigo: #6610f2 !default;
+$purple: #6f42c1 !default;
+$pink: #e83e8c !default;
+$red: #dc3545 !default;
+$orange: #ff9560;
+$yellow: #f5c938;
+$green: #87a63e;
+$teal: #20c997 !default;
+$cyan: #7dd0e8 !default;
+$navy: #18374b;
 
-$primary:       $blue;
-$secondary:     $orange;
-$success:       $green !default;
-$info:          $cyan !default;
-$warning:       $yellow !default;
-$danger:        $red !default;
-$light:         $gray-100;
-$dark:          $gray-700;
+$primary: $blue;
+$secondary: $orange;
+$success: $green !default;
+$info: $cyan !default;
+$warning: $yellow !default;
+$danger: $red !default;
+$light: $gray-100;
+$dark: $gray-700;
 
+$body-bg: $white;
+$body-color: $dark;
 
-$body-bg:               $white;
-$body-color:            $dark;
+$font-family-base: "Berlingske Serif Regular", Georgia, serif;
+$font-family-secondary: "commuter-sans", Helvetica, Arial, sans-serif;
+$font-family-base-bold: "Berlingske Serif ExtraBold", Georgia, serif;
 
+// $font-family-forms: "motiva-sans", Helvetica, Arial, sans-serif;
+$font-family-forms: "roboto-condensed", Helvetica, Arial, sans-serif;
 
-$font-family-base:      'Berlingske Serif Regular', Georgia, serif;
-$font-family-secondary: 'commuters-sans', Helvetica, Arial, sans-serif;
-$font-family-base-bold: 'Berlingske Serif ExtraBold', Georgia, serif;
+$font-size-base: 1.2rem; // Assumes the browser default, typically `16px`
+$font-size-lg: ($font-size-base * 1.25) !default;
+$font-size-sm: ($font-size-base * 0.875) !default;
 
-$font-size-base:              1.2rem; // Assumes the browser default, typically `16px`
-$font-size-lg:                ($font-size-base * 1.25) !default;
-$font-size-sm:                ($font-size-base * .875) !default;
+$font-weight-light: 300 !default;
+$font-weight-normal: 400 !default;
+$font-weight-bold: 700 !default;
 
-$font-weight-light:           300 !default;
-$font-weight-normal:          400 !default;
-$font-weight-bold:            700 !default;
+$font-weight-base: $font-weight-normal !default;
+$line-height-base: 1.8 !default;
 
-$font-weight-base:            $font-weight-normal !default;
-$line-height-base:            1.8 !default;
+$h1-font-size: $font-size-base * 2.5 !default;
+$h2-font-size: $font-size-base * 2 !default;
+$h3-font-size: $font-size-base * 1.75 !default;
+$h4-font-size: $font-size-base * 1.2 !default;
+$h5-font-size: $font-size-base * 1.25 !default;
+$h6-font-size: $font-size-base !default;
 
-$h1-font-size:                $font-size-base * 2.5 !default;
-$h2-font-size:                $font-size-base * 2 !default;
-$h3-font-size:                $font-size-base * 1.75 !default;
-$h4-font-size:                $font-size-base * 1.2 !default;
-$h5-font-size:                $font-size-base * 1.25 !default;
-$h6-font-size:                $font-size-base !default;
+$headings-font-family: $font-family-base-bold;
+$headings-font-weight: 600;
+$headings-line-height: 1.2 !default;
+$headings-color: inherit !default;
 
-$headings-font-family:        $font-family-base-bold;
-$headings-font-weight:        600;
-$headings-line-height:        1.2 !default;
-$headings-color:              inherit !default;
-
-
-$border-radius:           0;
+$border-radius: 0;
 
 $grid-breakpoints: (
   xs: 0,
@@ -83,7 +81,7 @@ $container-max-widths: (
   xl: 1140px
 ) !default;
 
-$screen-sm-min:           576px;
-$screen-md-min:           768px;
-$screen-lg-min:           992px;
-$screen-xl-min:           1200px;
+$screen-sm-min: 576px;
+$screen-md-min: 768px;
+$screen-lg-min: 992px;
+$screen-xl-min: 1200px;
