--- a/src/assets/_scss/base/_forms.scss
+++ b/src/assets/_scss/base/_forms.scss
@@ -14,83 +14,254 @@
   }
 }
 
-
 // Enter cognito styles below
+
 .cognito {
-  .c-forms-form {
-    .c-field {
-      padding: 10px 0;
-      @include media-breakpoint-up(md) {
-        display: flex;
-        align-items: center;
-      }
-      
-      
+  font-family: $font-family-forms;
+  font-size: 1rem;
+  // Ratings
+  .c-rating-scale {
+    position: relative;
+    border-top: 1px solid $gray-300;
+    // border-bottom: 1px solid $gray-300;
+    legend {
+      position: absolute;
+      top: 30px;
+      left: 0;
+      font-size: 1rem;
     }
-    [data-field="Message"] {
-      @include media-breakpoint-up(md) {
-        align-items: flex-start;
-        label {
-          display: inline-block;
-          padding-top: 10px;
+  }
+  // table {
+  //   @extend .table;
+  //   @extend .table-sm;
+  //   @extend .table-striped;
+  //   @extend .table-bordered;
+  // }
+  .c-choice-option-header {
+    font-size: 0.85rem;
+  }
+
+  .c-progress-section {
+    padding-bottom: 2rem;
+    border-bottom: 1px solid $gray-300;
+    margin-bottom: 2rem;
+    .c-forms-progress ol {
+      counter-reset: mycounter;
+      list-style: none;
+      margin: 0;
+      clear: both;
+      padding: 0;
+      li {
+        float: left;
+        position: relative;
+        list-style-type: none;
+        margin-bottom: 5px;
+        text-align: center;
+        padding: 8px 4px 4px;
+        border-right: 1px solid transparent;
+        span {
+          opacity: 0.7;
+        }
+        &::before {
+          content: "";
+          position: absolute;
+          top: -8px;
+          left: 0;
+          width: 100%;
+          height: 12px;
+          display: block;
+          background: rgba($dark, 0.04);
+          border-color: rgba($white, 1);
+        }
+        &::after {
+          content: "";
+          position: absolute;
+          top: -3px;
+          left: 50%;
+          width: 0;
+          height: 0;
+          display: block;
+          border: 5px solid transparent;
+          margin-left: -5px;
+        }
+        &.c-page-selected {
+          span {
+            opacity: 1;
+          }
+          &::before {
+            background-color: $primary;
+            color: $white;
+            border-color: $primary;
+          }
+          &::after {
+            top: 4px;
+            border-top-color: $primary;
+          }
         }
       }
     }
-    .c-label {
-      min-width: 85px;
-      font-family: $font-family-base-bold !important;
-      color: $dark !important;
-      padding: 0;
+  }
+
+  .c-button {
+    padding: 0.375rem 1.25rem;
+    margin: 1rem 8px;
+    background-color: $dark;
+    border-color: $dark;
+    color: $white;
+    @include transition(0.5s);
+    &:hover {
+      background-color: $secondary;
+      border-color: $secondary;
     }
-    .c-editor {
-      font-family: $font-family-base !important;
-      padding-left: 0;
-      padding-right: 0;
-      color: $dark !important;
-      font-size: 0.95rem !important;
-      background-color: $light;
-      width: 100%;
+    &:first-child {
+      margin-left: 8px;
     }
-    .c-title {
-      padding: 0;
-    }
-    .c-button-section {
-      button {
-        margin: 20px auto;
-        border-radius: 0;
-        border: 0;
+    &.c-page-next-page {
+      background-color: $primary;
+      border-color: $primary;
+      color: $dark;
+      &:hover {
+        background-color: $secondary;
+        border-color: $secondary;
       }
     }
-    .c-action {
-      width: 100%;
+  }
+
+  .c-forms-form {
+    &:focus {
+      outline: none;
+    }
+    .c-forms-form-heading {
+      .c-forms-form-title {
+        padding-bottom: 0;
+        h2 {
+          font-size: $h1-font-size;
+          margin-bottom: 0;
+          // font-family: $font-family-base-bold;
+          // font-weight: $headings-font-weight;
+          // line-height: $headings-line-height;
+          // color: $headings-color;
+        }
+      }
+    }
+    .c-forms-description {
+      font-family: $font-family-base;
+      line-height: 1.5;
+      border-bottom: 1px solid $gray-300;
+      margin-bottom: 1rem;
+      padding-bottom: 1rem;
+    }
+    .c-html {
+      h4 {
+        font-family: $font-family-base;
+        font-weight: 700;
+      }
+      p {
+        font-family: $font-family-base;
+        font-size: 1rem;
+      }
+    }
+    .c-repeating-section-item-title,
+    .c-repeating-section-add {
+      display: none;
+    }
+    .c-repeating-section-container {
       margin: 0;
-      @include media-breakpoint-up(md) {
-        padding-left: 85px;
+      padding: 0;
+      &:nth-child(odd) {
+        background: transparent;
+        border-bottom: 1px dashed $dark;
+        padding-bottom: 2rem;
+        margin-bottom: 2rem;
+      }
+      .c-repeating-section-item {
+        margin: 0;
+      }
+      .c-label {
+        padding: 0;
+        font-weight: 600;
+      }
+      .c-editor {
+        padding-left: 0;
+        padding-right: 0;
+        background-color: transparent;
+        input,
+        textarea {
+          background-color: $light;
+        }
       }
     }
-    input[type="text"],
-    textarea {
-      background: transparent;
-      padding: 8px;
-      border: 0 !important;
-    }
-    .c-validation {
-      border-radius: 0;
-      margin: 0 8px 0 0;
-      background-color: $secondary !important;
-    }
-    .c-forms-confirmation {
-      text-align: center;
-      background-color: transparent;
-      min-height: 0;
-    }
-    .c-forms-confirmation-message {
-      color: $dark !important;
-      font-family: $font-family-base-bold !important;
-      font-size: 25px !important;
-      border: 1px solid $dark;
-      width: 100%;
-    }
+    // .c-field {
+    //   padding: 10px 0;
+    //   @include media-breakpoint-up(md) {
+    //     display: flex;
+    //     align-items: center;
+    //   }
+    // }
+    // [data-field="Message"] {
+    //   @include media-breakpoint-up(md) {
+    //     align-items: flex-start;
+    //     label {
+    //       display: inline-block;
+    //       padding-top: 10px;
+    //     }
+    //   }
+    // }
+    // .c-label {
+    //   min-width: 85px;
+    //   font-family: $font-family-base-bold !important;
+    //   color: $dark !important;
+    //   padding: 0;
+    // }
+    // .c-editor {
+    //   font-family: $font-family-base !important;
+    //   padding-left: 0;
+    //   padding-right: 0;
+    //   color: $dark !important;
+    //   font-size: 0.95rem !important;
+    //   background-color: $light;
+    //   width: 100%;
+    // }
+    // .c-title {
+    //   padding: 0;
+    // }
+    // .c-button-section {
+    //   button {
+    //     margin: 20px auto;
+    //     border-radius: 0;
+    //     border: 0;
+    //   }
+    // }
+    // .c-action {
+    //   width: 100%;
+    //   margin: 0;
+    //   @include media-breakpoint-up(md) {
+    //     padding-left: 85px;
+    //   }
+    // }
+    // input[type="text"],
+    // textarea {
+    //   background: transparent;
+    //   padding: 8px;
+    //   border: 0 !important;
+    // }
+    // .c-validation {
+    //   border-radius: 0;
+    //   margin: 0 8px 0 0;
+    //   background-color: $secondary !important;
+    // }
+    // .c-forms-confirmation {
+    //   text-align: center;
+    //   background-color: transparent;
+    //   min-height: 0;
+    // }
+    // .c-forms-confirmation-message {
+    //   color: $dark !important;
+    //   font-family: $font-family-base-bold !important;
+    //   font-size: 25px !important;
+    //   border: 1px solid $dark;
+    //   width: 100%;
+    // }
   }
   #c-submit-button {
     float: none;
@@ -107,45 +278,51 @@
   }
 }
 
-//form page styles (message strategy and testimonials)
-.form {
+.project-review {
   .cognito {
-    .c-forms-form {
-      .c-field {
-        padding: 10px 0;
-        display: block;
-        @include media-breakpoint-up(md) {
-          display: block;
-        }
-      }
-      .c-label {
-        min-width: 0;
-      }
-      .c-editor {
-        padding-left: 0;
-        padding-right: 8px;
-        background-color: transparent;
-        input,
-        textarea {
-          background-color: $light;
-        }
-      }
-      // .c-title {
-      //   padding: 0;
-      // }
-      // .c-button-section {
-      //   button {
-      //     margin: 20px auto;
-      //     border-radius: 0;
-      //     border: 0;
-      //   }
-      // }
-      .c-action {
-        @include media-breakpoint-up(md) {
-          padding-left: 0;
-        }
-      }
+    .c-choice-option-header {
     }
   }
 }
 
+//form page styles (message strategy and testimonials)
+// .form {
+//   .cognito {
+//     .c-forms-form {
+//       .c-field {
+//         padding: 10px 0;
+//         display: block;
+//         @include media-breakpoint-up(md) {
+//           display: block;
+//         }
+//       }
+//       .c-label {
+//         min-width: 0;
+//       }
+//       .c-editor {
+//         padding-left: 0;
+//         padding-right: 8px;
+//         background-color: transparent;
+//         input,
+//         textarea {
+//           background-color: $light;
+//         }
+//       }
+//       // .c-title {
+//       //   padding: 0;
+//       // }
+//       // .c-button-section {
+//       //   button {
+//       //     margin: 20px auto;
+//       //     border-radius: 0;
+//       //     border: 0;
+//       //   }
+//       // }
+//       .c-action {
+//         @include media-breakpoint-up(md) {
+//           padding-left: 0;
+//         }
+//       }
+//     }
+//   }
+// }
