--- a/src/assets/_scss/base/_mixins.scss
+++ b/src/assets/_scss/base/_mixins.scss
@@ -1,55 +1,59 @@
-@mixin transition($duration: .3s, $property: all, $effect: ease-in-out) {
+@mixin transition($duration: 0.3s, $property: all, $effect: ease-in-out) {
   transition: $property $duration $effect;
 }
 
-@mixin animation($effect: fadeIn, $duration: .5s, $delay: 0s) {
+@mixin animation($effect: fadeIn, $duration: 0.5s, $delay: 0s) {
   animation-name: $effect;
   animation-duration: $duration;
   animation-fill-mode: both;
   animation-delay: ($delay);
 }
 
-@mixin inlineLinkHoverAnimation(
-  $color: $primary, 
-  $opacity: 1, 
-  $height-start: 20%, 
+@mixin inline-link-hover-animation(
+  $color: $primary,
+  $opacity: 1,
+  $height-start: 20%,
   $height-hover: 200%,
   $height-active: $height-start,
   $offset-start: 0,
   $offset-hover: 0,
   $offset-active: 0,
-  $duration: 300ms, 
-  $element: '',
-  $from: 'bottom'
-){
+  $duration: 300ms,
+  $element: "",
+  $from: "bottom"
+) {
   & #{$element} {
     text-decoration: none;
     color: inherit;
     cursor: pointer;
     background-size: 100% ($height-start);
     background-repeat: no-repeat;
-    background-image: linear-gradient(to top, rgba($color, $opacity) 50%, rgba(0,0,0,0) 50.1%);
+    background-image: linear-gradient(
+      to top,
+      rgba($color, $opacity) 50%,
+      rgba($black, 0) 50.1%
+    );
     background-position: left 0 bottom ($offset-start);
     transition: background $duration ease;
   }
 
   &:focus #{$element},
   &:hover #{$element},
-  &:active #{$element}{
+  &:active #{$element} {
     text-decoration: none;
     color: inherit;
   }
-  
+
   &:focus #{$element} {
     outline: none;
   }
 
-  &:hover #{$element}{
+  &:hover #{$element} {
     background-size: 100% ($height-hover);
     background-position: left 0 bottom ($offset-hover);
   }
-  
-  &:active #{$element}{
+
+  &:active #{$element} {
     background-size: 100% $height-active;
     background-position: left 0 bottom ($offset-active);
   }
