--- a/src/assets/_scss/base/_page_header.scss
+++ b/src/assets/_scss/base/_page_header.scss
@@ -1,7 +1,7 @@
 #page-header {
   border-top: 5px solid $blue;
   position: fixed;
-  -webkit-transform: translateZ(0); //fix for jitter in chrome
+  transform: translateZ(0); //fix for jitter in chrome
   top: 0;
   left: 0;
   width: 100%;
@@ -101,7 +101,6 @@
   }
 }
 
-
 .navbar-collapse {
   @include media-breakpoint-down(sm) {
     position: fixed;
@@ -113,7 +112,7 @@
     width: 250px;
     height: 100%;
     background-color: $white;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 4px 4px rgba($black, 0.5);
     @include transition(0.4s);
     .navbar-nav {
       padding-top: 15px;
@@ -134,5 +133,5 @@
 }
 
 .collapse:not(.show) {
-    display: block;
+  display: block;
 }
