--- a/src/assets/_scss/base/_utilities.scss
+++ b/src/assets/_scss/base/_utilities.scss
@@ -3,7 +3,7 @@
 
   &::before,
   &::after {
-    content: '';
+    content: "";
     display: table;
   }
 
@@ -69,7 +69,6 @@
   }
   &.bg-fixed {
     background-attachment: fixed;
-    
   }
 }
 
@@ -106,7 +105,7 @@
   position: relative;
   padding-right: 20px;
   &::after {
-    content: '';
+    content: "";
     position: absolute;
     top: 50%;
     margin-top: -2px;
@@ -133,7 +132,7 @@
 
 .text-mega {
   font-size: calc(28px + (88 - 28) * ((100vw - 300px) / (1440 - 300)));
-  line-height: calc(1.3em + (1.5 - 1.2) * ((100vw - 300px)/(1440 - 300)));
+  line-height: calc(1.3em + (1.5 - 1.2) * ((100vw - 300px) / (1440 - 300)));
 }
 
 .text-large {
