--- a/src/assets/_scss/elements/_buttons.scss
+++ b/src/assets/_scss/elements/_buttons.scss
@@ -9,7 +9,7 @@
     color: $white;
     text-transform: uppercase;
     text-decoration: underline solid $primary;
-    @include inlineLinkHoverAnimation();
+    @include inline-link-hover-animation();
   }
   &.btn-outline-dark {
     color: $dark;
@@ -27,10 +27,10 @@
       left: 0;
       bottom: 0;
       width: 100%;
-      content: '';
+      content: "";
       position: absolute;
       z-index: -1;
-      @include transition(.3s);
+      @include transition(0.3s);
     }
     &:hover {
       color: $light !important;
@@ -53,10 +53,10 @@
       left: 0;
       bottom: 0;
       width: 100%;
-      content: '';
+      content: "";
       position: absolute;
       z-index: -1;
-      @include transition(.3s);
+      @include transition(0.3s);
     }
     &:hover {
       color: $dark !important;
@@ -66,28 +66,3 @@
     }
   }
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
