--- a/src/assets/_scss/elements/_hover_overlay.scss
+++ b/src/assets/_scss/elements/_hover_overlay.scss
@@ -1,4 +1,3 @@
-
 .hover-overlay {
   @include transition(0.5s);
   display: flex;
@@ -10,7 +9,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(103,220,229, 0.9);
+  background-color: rgba($blue, 0.9);
   text-align: center;
   padding: 40px;
   cursor: pointer;
@@ -28,6 +27,5 @@
   }
   &:hover {
     opacity: 1;
-    
-  } 
+  }
 }
