fix min height for form-content

--- a/src/_layouts/form.html
+++ b/src/_layouts/form.html
@@ -5,7 +5,7 @@
     <div id="barba-wrapper">
       <div class="barba-container" data-namespace="{{ page.title | slugify }}">
         {% include forms/header.html %}
-        <main id="page-content">{{ content }}</main>
+        <main id="form-content">{{ content }}</main>
         {% include forms/footer.html %}
         {% include scripts.html %}
       </div>
