updated for data

--- a/src/assets/_scss/base/_forms.scss
+++ b/src/assets/_scss/base/_forms.scss
@@ -156,6 +156,7 @@
     }
     .c-html {
       h4 {
+        margin-bottom: 1rem;
         font-family: $font-family-base;
         font-weight: 700;
       }
