--- a/src/assets/_scss/main.scss
+++ b/src/assets/_scss/main.scss
@@ -29,6 +29,7 @@
 // @import "elements/transitions";
 // @import "elements/page_intro";
 @import "elements/page_transition";
+@import "elements/parallax";
 
 // Components
 @import "components/mosaic";
