display weather data from feed

--- a/src/assets/_scss/main.scss
+++ b/src/assets/_scss/main.scss
@@ -33,6 +33,7 @@
 
 // Components
 @import "components/mosaic";
+@import "components/weather_icons";
 
 // Import view specific styles
 @import "pages/focus";
