testing url params

--- a/src/_layouts/review.html
+++ b/src/_layouts/review.html
@@ -20,7 +20,7 @@ layout: form
                 }
                 return result;
               }
-              var entry = findGetParameter("reviewer");
+              var entry = findGetParameter("entry");
               console.log(entry);
               Cognito.load("forms", {
                 id: "33",
