updated styles for testimonials

--- a/src/assets/_scss/base/_forms.scss
+++ b/src/assets/_scss/base/_forms.scss
@@ -191,6 +191,7 @@
         background-color: transparent;
         input,
         textarea {
+          padding: 10px;
           background-color: $light;
         }
       }
