--- a/src/assets/_scss/elements/_page_transition.scss
+++ b/src/assets/_scss/elements/_page_transition.scss
@@ -1,6 +1,8 @@
 //PageTransition
 .loading {
+  background-color: $primary;
   #page-content {
     opacity: 0;
+    @include transition(.5s);
   }
 }
