--- a/src/_includes/photo-grid.html
+++ b/src/_includes/photo-grid.html
@@ -10,28 +10,49 @@
   {% endif %}
 {% endfor %}
 
-<div class="row slide-up no-gutters">
+<div class="row slide-up-1 no-gutters">
   <div class="col-12">
     <a href="{{ project1.url }}"
        data-image="{{ project1.featured_image | default: site.placeholders.aspect-4x3 }}"
-       data-transition="ProjectTransition">
+       data-transition="ProjectTransition"
+       class="expand-full-screen position-relative d-block">
         <div class="bg-image aspect-16x9" style="background-image: url({{ project1.featured_image | default: site.placeholders.aspect-4x3 }})"></div>
+        <div class="hover-overlay">
+          <div class="overlay-content">
+            <p class="hover-primary-text">{{ project1.quote }}</p>
+            <p class="hover-secondary-text">{{ project1.client }}</p>
+          </div>
+        </div>
     </a>
   </div>
 </div>
 <div class="row no-gutters">
-  <div class="col-lg-6 slide-right">
+  <div class="col-lg-6 slide-up-1">
     <a href="{{ project2.url }}"
        data-image="{{ project2.featured_image | default: site.placeholders.aspect-4x3 }}"
-       data-transition="ProjectTransition">
-        <div class="bg-image aspect-16x9" style="background-image: url({{ project2.featured_image | default: site.placeholders.aspect-4x3 }})"></div>
+       data-transition="ProjectTransition"
+       class="expand-full-screen position-relative d-block">
+      <div class="bg-image aspect-16x9" style="background-image: url({{ project2.featured_image | default: site.placeholders.aspect-4x3 }})"></div>
+      <div class="hover-overlay">
+        <div class="overlay-content">
+          <p class="hover-primary-text">{{ project2.quote }}</p>
+          <p class="hover-secondary-text">{{ project2.client }}</p>
+        </div>
+      </div>
     </a>
   </div>
-  <div class="col-lg-6 slide-left">
+  <div class="col-lg-6 slide-up-2">
     <a href="{{ project3.url }}"
        data-image="{{ project3.featured_image | default: site.placeholders.aspect-4x3 }}"
-       data-transition="ProjectTransition">
-        <div class="bg-image aspect-16x9" style="background-image: url({{ project3.featured_image | default: site.placeholders.aspect-4x3 }})"></div>
+       data-transition="ProjectTransition"
+       class="expand-full-screen position-relative d-block">
+      <div class="bg-image aspect-16x9" style="background-image: url({{ project3.featured_image | default: site.placeholders.aspect-4x3 }})"></div>
+      <div class="hover-overlay">
+        <div class="overlay-content">
+          <p class="hover-primary-text">{{ project3.quote }}</p>
+          <p class="hover-secondary-text">{{ project3.client }}</p>
+        </div>
+      </div>
     </a>
   </div>
 </div>
