--- a/src/assets/_scss/elements/_hover_overlay.scss
+++ b/src/assets/_scss/elements/_hover_overlay.scss
@@ -19,11 +19,13 @@
     font-size: 1.8rem;
     line-height: 1.4;
     margin-bottom: 0;
+    color: $white;
   }
   .hover-secondary-text {
     font-family: $font-family-secondary;
     font-size: 0.9rem;
     margin-bottom: 0;
+    color: $white;
   }
   &:hover {
     opacity: 1;
