animations and transitions

--- a/src/_includes/photo-grid.html
+++ b/src/_includes/photo-grid.html
@@ -26,8 +26,8 @@
     </a>
   </div>
 </div>
-<div class="row no-gutters">
-  <div class="col-lg-6 slide-up-1">
+<div class="row slide-up-1 no-gutters">
+  <div class="col-lg-6">
     <a href="{{ project2.url }}"
        data-image="{{ project2.featured_image | default: site.placeholders.aspect-4x3 }}"
        data-transition="ProjectTransition"
@@ -41,7 +41,7 @@
       </div>
     </a>
   </div>
-  <div class="col-lg-6 slide-up-2">
+  <div class="col-lg-6">
     <a href="{{ project3.url }}"
        data-image="{{ project3.featured_image | default: site.placeholders.aspect-4x3 }}"
        data-transition="ProjectTransition"
