--- a/src/assets/_scss/base/_global.scss
+++ b/src/assets/_scss/base/_global.scss
@@ -1,8 +1,13 @@
+html {
+  
+}
+
 body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-family: $font-family-base;
   line-height: 1.5;
+  background-color: $primary;
   @include media-breakpoint-down(md) {
     font-size: 1rem;
     line-height: 1.3;
